Rename to Espresso Systems

--- a/wallet/public/index.html
+++ b/wallet/public/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>Spectrum Transfer</h1>
+    <h1>Mock Transfer</h1>
     <div style="width:50%;min-width:300px">
       <div style="background-color:#f4f4f4;margin:16px;padding:16px;border:1px solid black;box-shadow:4px 4px lightgray">
         <form action="/transfer/" method="get">
