--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="INTRODUCTION.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="SmartContracts.html"><strong aria-hidden="true">2.</strong> Smart Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CAPE.html"><strong aria-hidden="true">2.1.</strong> CAPE</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="AssetRegistry.html"><strong aria-hidden="true">2.1.1.</strong> AssetRegistry</a></li><li class="chapter-item expanded "><a href="Queue.html"><strong aria-hidden="true">2.1.2.</strong> Queue</a></li><li class="chapter-item expanded "><a href="RecordsMerkleTree.html"><strong aria-hidden="true">2.1.3.</strong> RecordsMerkleTree</a></li><li class="chapter-item expanded "><a href="RootStore.html"><strong aria-hidden="true">2.1.4.</strong> RootStore</a></li><li class="chapter-item expanded "><a href="interfaces/IPlonkVerifier.html"><strong aria-hidden="true">2.1.5.</strong> IPlonkVerifier</a></li><li class="chapter-item expanded "><a href="verifier/PlonkVerifier.html"><strong aria-hidden="true">2.1.6.</strong> PlonkVerifier</a></li></ol></li><li class="chapter-item expanded "><a href="SimpleToken.html"><strong aria-hidden="true">2.2.</strong> SimpleToken</a></li></ol></li><li class="chapter-item expanded "><a href="Security.html"><strong aria-hidden="true">3.</strong> Security</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="MaliciousERC20TokenContract.html"><strong aria-hidden="true">3.1.</strong> DoS on Relayer via malicious ERC20 token contract</a></li></ol></li><li class="chapter-item expanded "><a href="ANCILLARY.html"><strong aria-hidden="true">4.</strong> Ancillary Material</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Greeter.html"><strong aria-hidden="true">4.1.</strong> Greeter</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="INTRODUCTION.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="SmartContracts.html"><strong aria-hidden="true">2.</strong> Smart Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CAPE.html"><strong aria-hidden="true">2.1.</strong> CAPE</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="AssetRegistry.html"><strong aria-hidden="true">2.1.1.</strong> AssetRegistry</a></li><li class="chapter-item expanded "><a href="RecordsMerkleTree.html"><strong aria-hidden="true">2.1.2.</strong> RecordsMerkleTree</a></li><li class="chapter-item expanded "><a href="RootStore.html"><strong aria-hidden="true">2.1.3.</strong> RootStore</a></li><li class="chapter-item expanded "><a href="interfaces/IPlonkVerifier.html"><strong aria-hidden="true">2.1.4.</strong> IPlonkVerifier</a></li><li class="chapter-item expanded "><a href="verifier/PlonkVerifier.html"><strong aria-hidden="true">2.1.5.</strong> PlonkVerifier</a></li></ol></li><li class="chapter-item expanded "><a href="SimpleToken.html"><strong aria-hidden="true">2.2.</strong> SimpleToken</a></li></ol></li><li class="chapter-item expanded "><a href="Security.html"><strong aria-hidden="true">3.</strong> Security</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="MaliciousERC20TokenContract.html"><strong aria-hidden="true">3.1.</strong> DoS on Relayer via malicious ERC20 token contract</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -147,19 +147,19 @@
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The CAPE system is a set of components which purpose is to enable users to</p>
 <ul>
-<li>Issue, Transfer and Freeze assets on an AAP blockchain</li>
-<li>Wrap ERC20/ERC721 tokens into AAP asset records</li>
-<li>Unwrap AAP asset records into ERC20/ERC721 tokens</li>
+<li>Create, Transfer and Freeze assets on an CAPE system.</li>
+<li>Wrap ERC20 tokens into CAPE asset records.</li>
+<li>Unwrap CAPE asset records back into ERC20 tokens.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="smart-contracts"><a class="header" href="#smart-contracts">Smart contracts</a></h1>
 <h2 id="cape-contract"><a class="header" href="#cape-contract">CAPE Contract</a></h2>
-<p>The CAPE Smart contract allows bidirectional transfers of assets between Ethereum and the CAPE Blockchain. 
+<p>The CAPE Smart contract allows bidirectional transfers of assets between Ethereum and the CAPE system. 
 Its design is inspired by <a href="https://tornado.cash/">Tornado Cash</a> where an ERC20 token transfer can trigger automatically the creation of some asset record inside the CAPE Blockchain. 
 Transferring assets from CAPE to Ethereum relies on the idea of burning/destroying the asset record and unlock it on the other side (Ethereum) also in an atomic fashion.</p>
 <h3 id="interfaces"><a class="header" href="#interfaces">Interfaces</a></h3>
 <p>The CAPE contract has 4 public <a href="./CAPE.html">interfaces</a>: </p>
 <ul>
-<li><code>constructor</code> that is run only once when the contract is deployed</li>
+<li><code>constructor</code> that is run only once when the contract is deployed.</li>
 <li><code>sponsorCapeAsset</code> which allows to register a new asset type bound to an ERC20 token. </li>
 <li><code>depositErc20</code> allows to <em>wrap</em> ERC20 tokens into some asset records of a specific type that has already been registered earlier through <code>sponsorCapeAsset</code>.</li>
 <li><code>submitCapeBlock</code> allows anyone to submit a block of CAPE transactions. If all the transactions in this block are valid then the state of the CAPE blockchain will be updated accordingly. If a transaction in the block is of type BURN, the asset records will be destroyed and the equivalent amount of ERC20 token will be sent to some specified ethereum address. This process is called <em>unwrapping</em>. </li>
@@ -416,7 +416,7 @@ reverts if the nullifier is already published</p>
 <pre><code class="language-solidity">  function nativeDomesticAsset(
   ) public returns (struct AssetRegistry.AssetDefinition assetDefinition)
 </code></pre>
-<p>Return the CAP-native asset definition</p>
+<p>Return the CAP-native asset definition.</p>
 <hr />
 <h2 id="_lookup"><a class="header" href="#_lookup">_lookup</a></h2>
 <pre><code class="language-solidity">  function _lookup(
@@ -513,7 +513,6 @@ ERC-20 token and the address of the sponsor.</p>
 <tr><td align="left">⇒</td><td align="left">address</td><td align="left">asset description</td></tr>
 </tbody></table>
 <hr />
-<div style="break-before: page; page-break-before: always;"></div><h1 id="queue"><a class="header" href="#queue">Queue</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="functions-2"><a class="header" href="#functions-2">Functions</a></h1>
 <h2 id="constructor-1"><a class="header" href="#constructor-1">constructor</a></h2>
 <pre><code class="language-solidity">  function constructor(
@@ -766,7 +765,14 @@ Requires arrays of size 30.</p>
 <tr><td align="left"><code>scalars</code></td><td align="left">uint256[]</td><td align="left">An array of scalars</td></tr>
 </tbody></table>
 <hr />
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="security"><a class="header" href="#security">Security</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="functions-6"><a class="header" href="#functions-6">Functions</a></h1>
+<h2 id="constructor-3"><a class="header" href="#constructor-3">constructor</a></h2>
+<pre><code class="language-solidity">  function constructor(
+  ) public
+</code></pre>
+<p>SimpleToken contract constructor. The caller of this method receives 1000*10**18 units.</p>
+<hr />
+<div style="break-before: page; page-break-before: always;"></div><h1 id="security"><a class="header" href="#security">Security</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
 <p>In this section we analyze a possible DoS attack on a relayer made possible by a malicious ERC20 Token.
 The attack works as follows:</p>
@@ -783,23 +789,6 @@ The attack works as follows:</p>
 <li>Only whitelisted tokens can be sponsored. </li>
 <li>Instead of withdrawing during the block submission we just do the bookkeeping and mark funds as &quot;available for withdrawal to address&quot;. The user later needs to run the withdraw transaction that moves the funds. </li>
 </ol>
-<div style="break-before: page; page-break-before: always;"></div><p>I'm guessing this stuff is low priority for documenting.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="functions-6"><a class="header" href="#functions-6">Functions</a></h1>
-<h2 id="constructor-3"><a class="header" href="#constructor-3">constructor</a></h2>
-<pre><code class="language-solidity">  function constructor(
-  ) public
-</code></pre>
-<hr />
-<h2 id="greet"><a class="header" href="#greet">greet</a></h2>
-<pre><code class="language-solidity">  function greet(
-  ) public returns (string)
-</code></pre>
-<hr />
-<h2 id="setgreeting"><a class="header" href="#setgreeting">setGreeting</a></h2>
-<pre><code class="language-solidity">  function setGreeting(
-  ) public
-</code></pre>
-<hr />
 
                     </main>
 
