deploy: 2beb708ade960e8d8efc9c0655c54e7c560fa8eb

--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="INTRODUCTION.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="SmartContracts.html"><strong aria-hidden="true">2.</strong> Smart Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CAPE.html"><strong aria-hidden="true">2.1.</strong> CAPE</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="AssetRegistry.html"><strong aria-hidden="true">2.1.1.</strong> AssetRegistry</a></li><li class="chapter-item expanded "><a href="RecordsMerkleTree.html"><strong aria-hidden="true">2.1.2.</strong> RecordsMerkleTree</a></li><li class="chapter-item expanded "><a href="RootStore.html"><strong aria-hidden="true">2.1.3.</strong> RootStore</a></li><li class="chapter-item expanded "><a href="interfaces/IPlonkVerifier.html"><strong aria-hidden="true">2.1.4.</strong> IPlonkVerifier</a></li><li class="chapter-item expanded "><a href="verifier/PlonkVerifier.html"><strong aria-hidden="true">2.1.5.</strong> PlonkVerifier</a></li></ol></li><li class="chapter-item expanded "><a href="SimpleToken.html"><strong aria-hidden="true">2.2.</strong> SimpleToken</a></li></ol></li><li class="chapter-item expanded "><a href="Security.html"><strong aria-hidden="true">3.</strong> Security</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="MaliciousERC20TokenContract.html"><strong aria-hidden="true">3.1.</strong> DoS on Relayer via malicious ERC20 token contract</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="INTRODUCTION.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="SmartContracts.html"><strong aria-hidden="true">2.</strong> Smart Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="CAPE.html"><strong aria-hidden="true">2.1.</strong> CAPE</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="AssetRegistry.html"><strong aria-hidden="true">2.1.1.</strong> AssetRegistry</a></li><li class="chapter-item expanded "><a href="RecordsMerkleTree.html"><strong aria-hidden="true">2.1.2.</strong> RecordsMerkleTree</a></li><li class="chapter-item expanded "><a href="RootStore.html"><strong aria-hidden="true">2.1.3.</strong> RootStore</a></li><li class="chapter-item expanded "><a href="interfaces/IPlonkVerifier.html"><strong aria-hidden="true">2.1.4.</strong> IPlonkVerifier</a></li><li class="chapter-item expanded "><a href="verifier/PlonkVerifier.html"><strong aria-hidden="true">2.1.5.</strong> PlonkVerifier</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="Security.html"><strong aria-hidden="true">3.</strong> Security</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="MaliciousERC20TokenContract.html"><strong aria-hidden="true">3.1.</strong> DoS on Relayer via malicious ERC20 token contract</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -764,13 +764,6 @@ Requires arrays of size 30.</p>
 <tr><td align="left"><code>bases</code></td><td align="left">struct BN254.G1Point[]</td><td align="left">An array of BN254 G1 points</td></tr>
 <tr><td align="left"><code>scalars</code></td><td align="left">uint256[]</td><td align="left">An array of scalars</td></tr>
 </tbody></table>
-<hr />
-<div style="break-before: page; page-break-before: always;"></div><h1 id="functions-6"><a class="header" href="#functions-6">Functions</a></h1>
-<h2 id="constructor-3"><a class="header" href="#constructor-3">constructor</a></h2>
-<pre><code class="language-solidity">  function constructor(
-  ) public
-</code></pre>
-<p>SimpleToken contract constructor. The caller of this method receives 1000*10**18 units.</p>
 <hr />
 <div style="break-before: page; page-break-before: always;"></div><h1 id="security"><a class="header" href="#security">Security</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
