deploy: 6eb85e57d732c49a48aa025d1fa62adb6498daaa

--- a/AssetRegistry.html
+++ b/AssetRegistry.html
@@ -150,10 +150,10 @@
 </code></pre>
 <p>Return the CAP-native asset definition.</p>
 <hr />
-<h2 id="_lookup"><a class="header" href="#_lookup">_lookup</a></h2>
-<pre><code class="language-solidity">  function _lookup(
+<h2 id="lookup"><a class="header" href="#lookup">lookup</a></h2>
+<pre><code class="language-solidity">  function lookup(
     struct AssetRegistry.AssetDefinition assetDefinition
-  ) internal returns (address)
+  ) public returns (address)
 </code></pre>
 <p>Fetch the ERC-20 token address corresponding to the
 given asset definition.</p>
