deploy: d0cd6caf37f5466c30c9d71cb4cead36d6eb5268

--- a/CAPE.html
+++ b/CAPE.html
@@ -360,6 +360,11 @@ reverts if the nullifier is already published</p>
 </tbody></table>
 <hr />
 <h1 id="events"><a class="header" href="#events">Events</a></h1>
+<h2 id="faucetinitialized"><a class="header" href="#faucetinitialized">FaucetInitialized</a></h2>
+<pre><code class="language-solidity">  event FaucetInitialized(
+  )
+</code></pre>
+<hr />
 <h2 id="blockcommitted"><a class="header" href="#blockcommitted">BlockCommitted</a></h2>
 <pre><code class="language-solidity">  event BlockCommitted(
   )
