deploy: 6970ffe3ff91d9286d22ad3a0fbd5d3a043517c3

--- a/MaliciousERC20TokenContract.html
+++ b/MaliciousERC20TokenContract.html
@@ -143,7 +143,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
+                        <!--
+ ~ Copyright (c) 2022 Espresso Systems (espressosys.com)
+ ~ This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
+ ~
+ ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
+ -->
+<h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
 <p>In this section we analyze a possible DoS attack on a relayer made possible by a malicious ERC20 Token.
 The attack works as follows:</p>
 <ul>
