--- a/index.html
+++ b/index.html
@@ -143,7 +143,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <!--
+ ~ Copyright (c) 2022 Espresso Systems (espressosys.com)
+ ~ This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
+ ~
+ ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
+ -->
+<h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The CAPE system is a set of components which purpose is to enable users to</p>
 <ul>
 <li>Create, Transfer and Freeze assets on an CAPE system.</li>
