--- a/print.html
+++ b/print.html
@@ -144,14 +144,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <!--
+ ~ Copyright (c) 2022 Espresso Systems (espressosys.com)
+ ~ This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
+ ~
+ ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
+ -->
+<h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The CAPE system is a set of components which purpose is to enable users to</p>
 <ul>
 <li>Create, Transfer and Freeze assets on an CAPE system.</li>
 <li>Wrap ERC20 tokens into CAPE asset records.</li>
 <li>Unwrap CAPE asset records back into ERC20 tokens.</li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="smart-contracts"><a class="header" href="#smart-contracts">Smart contracts</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><!--
+ ~ Copyright (c) 2022 Espresso Systems (espressosys.com)
+ ~ This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
+ ~
+ ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
+ -->
+<h1 id="smart-contracts"><a class="header" href="#smart-contracts">Smart contracts</a></h1>
 <h2 id="cape-contract"><a class="header" href="#cape-contract">CAPE Contract</a></h2>
 <p>The CAPE Smart contract allows bidirectional transfers of assets between Ethereum and the CAPE system. 
 Its design is inspired by <a href="https://tornado.cash/">Tornado Cash</a> where an ERC20 token transfer can trigger automatically the creation of some asset record inside the CAPE Blockchain. 
@@ -773,7 +789,15 @@ Requires arrays of size 30.</p>
 </tbody></table>
 <hr />
 <div style="break-before: page; page-break-before: always;"></div><h1 id="security"><a class="header" href="#security">Security</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><!--
+ ~ Copyright (c) 2022 Espresso Systems (espressosys.com)
+ ~ This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
+ ~
+ ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
+ -->
+<h1 id="dos-attack-on-relayer-via-malicious-erc20-token-contract"><a class="header" href="#dos-attack-on-relayer-via-malicious-erc20-token-contract">DoS Attack on Relayer via malicious ERC20 token contract</a></h1>
 <p>In this section we analyze a possible DoS attack on a relayer made possible by a malicious ERC20 Token.
 The attack works as follows:</p>
 <ul>
