--- a/RecordsMerkleTree.html
+++ b/RecordsMerkleTree.html
@@ -185,6 +185,7 @@
 <pre><code class="language-solidity">  function getRootValue(
   ) public returns (uint256)
 </code></pre>
+<p>Returns the root value of the Merkle tree.</p>
 <hr />
 
                     </main>
