--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The CAPE system is a set of components which purpose is to enable users to</p>
 <ul>
-<li>Create, Transfer and Freeze assets on an CAPE system.</li>
+<li>Create, Transfer and Freeze assets.</li>
 <li>Wrap ERC20 tokens into CAPE asset records.</li>
 <li>Unwrap CAPE asset records back into ERC20 tokens.</li>
 </ul>
