deploy: 80b70d184ff1ce6f059728406e2f808abe4c47b8

--- a/AssetRegistry.html
+++ b/AssetRegistry.html
@@ -240,6 +240,12 @@ ERC-20 token and the address of the sponsor.</p>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">address</td><td style="text-align: left">asset description</td></tr>
 </tbody></table>
 <hr />
+<h1 id="events"><a class="header" href="#events">Events</a></h1>
+<h2 id="assetsponsored"><a class="header" href="#assetsponsored">AssetSponsored</a></h2>
+<pre><code class="language-solidity">  event AssetSponsored(
+  )
+</code></pre>
+<hr />
 
                     </main>
 
