--- a/print.html
+++ b/print.html
@@ -532,6 +532,12 @@ ERC-20 token and the address of the sponsor.</p>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">address</td><td style="text-align: left">asset description</td></tr>
 </tbody></table>
 <hr />
+<h1 id="events-1"><a class="header" href="#events-1">Events</a></h1>
+<h2 id="assetsponsored"><a class="header" href="#assetsponsored">AssetSponsored</a></h2>
+<pre><code class="language-solidity">  event AssetSponsored(
+  )
+</code></pre>
+<hr />
 <div style="break-before: page; page-break-before: always;"></div><h1 id="functions-2"><a class="header" href="#functions-2">Functions</a></h1>
 <h2 id="constructor-1"><a class="header" href="#constructor-1">constructor</a></h2>
 <pre><code class="language-solidity">  function constructor(
