--- a/RecordsMerkleTree.html
+++ b/RecordsMerkleTree.html
@@ -161,10 +161,10 @@
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">struct RecordsMerkleTree.Node[]</td><td style="text-align: left">cursor to the root node of the create tree</td></tr>
 </tbody></table>
 <hr />
-<h2 id="_updaterecordsmerkletree"><a class="header" href="#_updaterecordsmerkletree">_updateRecordsMerkleTree</a></h2>
-<pre><code class="language-solidity">  function _updateRecordsMerkleTree(
+<h2 id="updaterecordsmerkletree"><a class="header" href="#updaterecordsmerkletree">updateRecordsMerkleTree</a></h2>
+<pre><code class="language-solidity">  function updateRecordsMerkleTree(
     uint256[] elements
-  ) internal
+  ) external
 </code></pre>
 <p>Update the state of the record merkle tree by inserting new elements.</p>
 <h3 id="parameters-2"><a class="header" href="#parameters-2">Parameters</a></h3>
@@ -177,6 +177,18 @@
   ) public returns (uint256)
 </code></pre>
 <p>Returns the root value of the Merkle tree.</p>
+<hr />
+<h2 id="getheight"><a class="header" href="#getheight">getHeight</a></h2>
+<pre><code class="language-solidity">  function getHeight(
+  ) public returns (uint8)
+</code></pre>
+<p>Returns the height of the Merkle tree.</p>
+<hr />
+<h2 id="getnumleaves"><a class="header" href="#getnumleaves">getNumLeaves</a></h2>
+<pre><code class="language-solidity">  function getNumLeaves(
+  ) public returns (uint64)
+</code></pre>
+<p>Returns the number of leaves of the Merkle tree.</p>
 <hr />
 
                     </main>
