--- a/print.html
+++ b/print.html
@@ -194,7 +194,6 @@ In other words a token that implements the <a href="https://eips.ethereum.org/EI
 <div style="break-before: page; page-break-before: always;"></div><h1 id="functions"><a class="header" href="#functions">Functions</a></h1>
 <h2 id="constructor"><a class="header" href="#constructor">constructor</a></h2>
 <pre><code class="language-solidity">  function constructor(
-    uint8 merkleTreeHeight,
     uint64 nRoots,
     address verifierAddr
   ) public
@@ -202,7 +201,6 @@ In other words a token that implements the <a href="https://eips.ethereum.org/EI
 <p>CAPE contract constructor method.</p>
 <h3 id="parameters"><a class="header" href="#parameters">Parameters</a></h3>
 <table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
-<tr><td style="text-align: left"><code>merkleTreeHeight</code></td><td style="text-align: left">uint8</td><td style="text-align: left">height of the merkle tree that stores the asset record commitments</td></tr>
 <tr><td style="text-align: left"><code>nRoots</code></td><td style="text-align: left">uint64</td><td style="text-align: left">number of the most recent roots of the records merkle tree to be stored</td></tr>
 <tr><td style="text-align: left"><code>verifierAddr</code></td><td style="text-align: left">address</td><td style="text-align: left">address of the Plonk Verifier contract</td></tr>
 </tbody></table>
@@ -282,6 +280,12 @@ A block creator must not submit notes with duplicate nullifiers.</p>
 <table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>newBlock</code></td><td style="text-align: left">struct CAPE.CapeBlock</td><td style="text-align: left">block to be processed by the CAPE contract.</td></tr>
 </tbody></table>
+<hr />
+<h2 id="_emitblockevent"><a class="header" href="#_emitblockevent">_emitBlockEvent</a></h2>
+<pre><code class="language-solidity">  function _emitBlockEvent(
+  ) internal
+</code></pre>
+<p>This function only exists to avoid a stack too deep compilation error.</p>
 <hr />
 <h2 id="_handlewithdrawal"><a class="header" href="#_handlewithdrawal">_handleWithdrawal</a></h2>
 <pre><code class="language-solidity">  function _handleWithdrawal(
@@ -409,6 +413,11 @@ A block creator must not submit notes with duplicate nullifiers.</p>
 <table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>note</code></td><td style="text-align: left">struct CAPE.FreezeNote</td><td style="text-align: left">note of type <em>FREEZE</em></td></tr>
 </tbody></table>
+<hr />
+<h2 id="getrootvalue"><a class="header" href="#getrootvalue">getRootValue</a></h2>
+<pre><code class="language-solidity">  function getRootValue(
+  ) public returns (uint256)
+</code></pre>
 <hr />
 <h1 id="events"><a class="header" href="#events">Events</a></h1>
 <h2 id="faucetinitialized"><a class="header" href="#faucetinitialized">FaucetInitialized</a></h2>
@@ -565,10 +574,10 @@ ERC-20 token and the address of the sponsor.</p>
 <tr><td style="text-align: left">⇒</td><td style="text-align: left">struct RecordsMerkleTree.Node[]</td><td style="text-align: left">cursor to the root node of the create tree</td></tr>
 </tbody></table>
 <hr />
-<h2 id="_updaterecordsmerkletree"><a class="header" href="#_updaterecordsmerkletree">_updateRecordsMerkleTree</a></h2>
-<pre><code class="language-solidity">  function _updateRecordsMerkleTree(
+<h2 id="updaterecordsmerkletree"><a class="header" href="#updaterecordsmerkletree">updateRecordsMerkleTree</a></h2>
+<pre><code class="language-solidity">  function updateRecordsMerkleTree(
     uint256[] elements
-  ) internal
+  ) external
 </code></pre>
 <p>Update the state of the record merkle tree by inserting new elements.</p>
 <h3 id="parameters-26"><a class="header" href="#parameters-26">Parameters</a></h3>
@@ -576,11 +585,23 @@ ERC-20 token and the address of the sponsor.</p>
 <tr><td style="text-align: left"><code>elements</code></td><td style="text-align: left">uint256[]</td><td style="text-align: left">The list of elements to be appended to the current merkle tree described by the frontier.</td></tr>
 </tbody></table>
 <hr />
-<h2 id="getrootvalue"><a class="header" href="#getrootvalue">getRootValue</a></h2>
+<h2 id="getrootvalue-1"><a class="header" href="#getrootvalue-1">getRootValue</a></h2>
 <pre><code class="language-solidity">  function getRootValue(
   ) public returns (uint256)
 </code></pre>
 <p>Returns the root value of the Merkle tree.</p>
+<hr />
+<h2 id="getheight"><a class="header" href="#getheight">getHeight</a></h2>
+<pre><code class="language-solidity">  function getHeight(
+  ) public returns (uint8)
+</code></pre>
+<p>Returns the height of the Merkle tree.</p>
+<hr />
+<h2 id="getnumleaves"><a class="header" href="#getnumleaves">getNumLeaves</a></h2>
+<pre><code class="language-solidity">  function getNumLeaves(
+  ) public returns (uint64)
+</code></pre>
+<p>Returns the number of leaves of the Merkle tree.</p>
 <hr />
 <div style="break-before: page; page-break-before: always;"></div><h1 id="functions-3"><a class="header" href="#functions-3">Functions</a></h1>
 <h2 id="constructor-2"><a class="header" href="#constructor-2">constructor</a></h2>
