--- a/RecordsMerkleTree.html
+++ b/RecordsMerkleTree.html
@@ -174,19 +174,19 @@
 <hr />
 <h2 id="getrootvalue"><a class="header" href="#getrootvalue">getRootValue</a></h2>
 <pre><code class="language-solidity">  function getRootValue(
-  ) public returns (uint256)
+  ) external returns (uint256)
 </code></pre>
 <p>Returns the root value of the Merkle tree.</p>
 <hr />
 <h2 id="getheight"><a class="header" href="#getheight">getHeight</a></h2>
 <pre><code class="language-solidity">  function getHeight(
-  ) public returns (uint8)
+  ) external returns (uint8)
 </code></pre>
 <p>Returns the height of the Merkle tree.</p>
 <hr />
 <h2 id="getnumleaves"><a class="header" href="#getnumleaves">getNumLeaves</a></h2>
 <pre><code class="language-solidity">  function getNumLeaves(
-  ) public returns (uint64)
+  ) external returns (uint64)
 </code></pre>
 <p>Returns the number of leaves of the Merkle tree.</p>
 <hr />
