--- a/print.html
+++ b/print.html
@@ -209,7 +209,7 @@ In other words a token that implements the <a href="https://eips.ethereum.org/EI
 <pre><code class="language-solidity">  function faucetSetupForTestnet(
     struct EdOnBN254.EdOnBN254Point faucetManagerAddress,
     bytes32 faucetManagerEncKey
-  ) public
+  ) external
 </code></pre>
 <p>Allocate native token faucet to a manager. For testnet only.</p>
 <h3 id="parameters-1"><a class="header" href="#parameters-1">Parameters</a></h3>
@@ -247,7 +247,7 @@ A block creator must not submit notes with duplicate nullifiers.</p>
 <pre><code class="language-solidity">  function depositErc20(
     struct CAPE.RecordOpening ro,
     address erc20Address
-  ) public
+  ) external
 </code></pre>
 <p>Wraps ERC-20 tokens into a CAPE asset defined in the record opening.</p>
 <h3 id="parameters-4"><a class="header" href="#parameters-4">Parameters</a></h3>
@@ -260,13 +260,13 @@ A block creator must not submit notes with duplicate nullifiers.</p>
 <pre><code class="language-solidity">  function submitCapeBlockWithMemos(
     struct CAPE.CapeBlock newBlock,
     bytes extraData
-  ) public
+  ) external
 </code></pre>
 <p>Submit a new block with extra data to the CAPE contract.</p>
 <h3 id="parameters-5"><a class="header" href="#parameters-5">Parameters</a></h3>
 <table><thead><tr><th style="text-align: left">Name</th><th style="text-align: left">Type</th><th style="text-align: left">Description</th></tr></thead><tbody>
 <tr><td style="text-align: left"><code>newBlock</code></td><td style="text-align: left">struct CAPE.CapeBlock</td><td style="text-align: left">block to be processed by the CAPE contract</td></tr>
-<tr><td style="text-align: left"><code>extraData</code></td><td style="text-align: left">bytes</td><td style="text-align: left">extra data to be stored in calldata; this data is ignored by the contract function</td></tr>
+<tr><td style="text-align: left"><code>extraData</code></td><td style="text-align: left">bytes</td><td style="text-align: left">data to be stored in calldata; this data is ignored by the contract function</td></tr>
 </tbody></table>
 <hr />
 <h2 id="submitcapeblock"><a class="header" href="#submitcapeblock">submitCapeBlock</a></h2>
@@ -416,7 +416,7 @@ A block creator must not submit notes with duplicate nullifiers.</p>
 <hr />
 <h2 id="getrootvalue"><a class="header" href="#getrootvalue">getRootValue</a></h2>
 <pre><code class="language-solidity">  function getRootValue(
-  ) public returns (uint256)
+  ) external returns (uint256)
 </code></pre>
 <hr />
 <h1 id="events"><a class="header" href="#events">Events</a></h1>
@@ -477,7 +477,7 @@ given asset definition.</p>
 <pre><code class="language-solidity">  function sponsorCapeAsset(
     address erc20Address,
     struct AssetRegistry.AssetDefinition newAsset
-  ) public
+  ) external
 </code></pre>
 <p>Create and register a new asset type associated with an
 ERC-20 token. Will revert if the asset type is already
@@ -587,19 +587,19 @@ ERC-20 token and the address of the sponsor.</p>
 <hr />
 <h2 id="getrootvalue-1"><a class="header" href="#getrootvalue-1">getRootValue</a></h2>
 <pre><code class="language-solidity">  function getRootValue(
-  ) public returns (uint256)
+  ) external returns (uint256)
 </code></pre>
 <p>Returns the root value of the Merkle tree.</p>
 <hr />
 <h2 id="getheight"><a class="header" href="#getheight">getHeight</a></h2>
 <pre><code class="language-solidity">  function getHeight(
-  ) public returns (uint8)
+  ) external returns (uint8)
 </code></pre>
 <p>Returns the height of the Merkle tree.</p>
 <hr />
 <h2 id="getnumleaves"><a class="header" href="#getnumleaves">getNumLeaves</a></h2>
 <pre><code class="language-solidity">  function getNumLeaves(
-  ) public returns (uint64)
+  ) external returns (uint64)
 </code></pre>
 <p>Returns the number of leaves of the Merkle tree.</p>
 <hr />
